[package]
name = "market"
version = "0.0.1"
authors = ["Andrew Song"]
edition = "2018"
description = "Fixed price market for CW721"
license = "MIT"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cw0 = { version = "0.9.1" }
cw-storage-plus = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = { version = "2", features = ["with-bytes"] }
terra-cosmwasm = { version = "2.2.0" }
cw20 = { version = "0.9.1" }
cw721 = { version = "0.9.1" }